--- a/app/src/main/res/layout/content_fragement.xml
+++ b/app/src/main/res/layout/content_fragement.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.anjile.shineourlove.rxjavaapplication.activity.MainActivity">
+    android:orientation="vertical">
 
-    <FrameLayout
+    <LinearLayout
         android:id="@+id/ll_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:text="Hello World!"></FrameLayout>
+        android:text="Hello World!"></LinearLayout>
 
     <com.ashokvarma.bottomnavigation.BottomNavigationBar
         android:id="@+id/bottom_navigation_bar"
@@ -18,4 +17,4 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"></com.ashokvarma.bottomnavigation.BottomNavigationBar>
 
-</RelativeLayout>
+</LinearLayout>
