2017/10/13 home page details viewPager by shineourlove

--- a/app/src/main/res/layout/architecture_item_layout.xml
+++ b/app/src/main/res/layout/architecture_item_layout.xml
@@ -1,37 +1,130 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="8dp"
+    android:orientation="vertical"
     android:paddingBottom="8dp"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
-    android:orientation="horizontal">
+    android:paddingTop="8dp">
 
-    <TextView
-        android:id="@+id/txt_architecture_item_company"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/txt_architecture_item_company"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
+            android:textColor="#282828"
+            android:textSize="14sp"
+            tools:text="红旗渠建设集团有限公司" />
+
+        <ImageView
+            android:id="@+id/img_architecture_item_hint"
+            android:layout_width="30dp"
+            android:layout_height="20dp"
+            android:layout_toRightOf="@+id/txt_architecture_item_company"
+            tools:src="@drawable/ssdk_oks_classic_email" />
+
+        <TextView
+            android:id="@+id/txt_architecture_item_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="6dp"
+            android:textColor="#656565"
+            android:textSize="13sp"
+            tools:text="最近中标：2017-9-26" />
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
-        android:textColor="#282828"
-        android:textSize="14sp"
-        tools:text="红旗渠建设集团有限公司" />
+        android:layout_marginTop="8dp"
+        android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/img_architecture_item_hint"
-        android:layout_width="30dp"
-        android:layout_height="20dp"
-        android:layout_toRightOf="@+id/txt_architecture_item_company"
-        tools:src="@drawable/ssdk_oks_classic_email" />
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="left"
+            android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/txt_architecture_item_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="6dp"
-        android:textColor="#656565"
-        android:textSize="13sp"
-        tools:text="最近中标：2017-9-26" />
-</RelativeLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="资质："
+                android:textColor="@color/gray_word" />
+
+            <TextView
+                android:id="@+id/txt_architecture_item_aptitude"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/blue_word"
+                tools:text="1" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=" 项"
+                android:textColor="@color/gray_word" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="经营信息："
+                android:textColor="@color/gray_word" />
+
+            <TextView
+                android:id="@+id/txt_architecture_item_manage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/blue_word"
+                tools:text="1" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=" 项"
+                android:textColor="@color/gray_word" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="right"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="荣誉："
+                android:textColor="@color/gray_word" />
+
+            <TextView
+                android:id="@+id/txt_architecture_item_honor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/blue_word"
+                tools:text="1" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=" 项"
+                android:textColor="@color/gray_word" />
+        </LinearLayout>
+    </LinearLayout>
+</LinearLayout>
