--- a/app/src/main/res/layout/fragment_home_layout.xml
+++ b/app/src/main/res/layout/fragment_home_layout.xml
@@ -284,7 +284,7 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/textView"
+                        android:id="@+id/txt_fragment_home_company"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:paddingBottom="10dp"
@@ -294,9 +294,10 @@
                         android:textColor="#009cff" />
 
                     <TextView
+                        android:id="@+id/txt_fragment_home_company_line"
                         android:layout_width="match_parent"
                         android:layout_height="2dp"
-                        android:background="#009cff" />
+                        android:background="@color/blue_line" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -306,6 +307,7 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/txt_fragment_home_info"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:paddingBottom="10dp"
@@ -315,9 +317,10 @@
                         android:textColor="#656565" />
 
                     <TextView
+                        android:id="@+id/txt_fragment_home_info_line"
                         android:layout_width="match_parent"
                         android:layout_height="2dp"
-                        android:background="#00ffffff" />
+                        android:background="@color/white" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -327,6 +330,7 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/txt_fragment_home_builder"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:paddingBottom="10dp"
@@ -336,9 +340,10 @@
                         android:textColor="#656565" />
 
                     <TextView
+                        android:id="@+id/txt_fragment_home_builder_line"
                         android:layout_width="match_parent"
                         android:layout_height="2dp"
-                        android:background="#00ffffff" />
+                        android:background="@color/white" />
                 </LinearLayout>
             </LinearLayout>
 
@@ -347,11 +352,11 @@
                 android:layout_height="1dp"
                 android:background="#EEEEEE" />
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/rcv_fragment_home_details"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:focusable="false" />
+            <!--<android.support.v7.widget.RecyclerView-->
+                <!--android:id="@+id/rcv_fragment_home_details"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:focusable="false" />-->
 
             <com.anjile.shineourlove.rxjavaapplication.view.AutoFitViewpager
                 android:id="@+id/vp_fragment_home_details"
