--- a/app/src/main/res/layout/fragment_home_layout.xml
+++ b/app/src/main/res/layout/fragment_home_layout.xml
@@ -35,6 +35,7 @@
                 android:src="@drawable/ssdk_oks_classic_pocket" />
 
             <RelativeLayout
+                android:id="@+id/rl_fragment_home_search"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginEnd="16dp"
