--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -32,6 +32,9 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="13dp"
+            android:paddingBottom="6dp"
+            android:paddingLeft="20dp"
+            android:paddingTop="6dp"
             android:text="提交"
             android:textColor="@color/black_wold"
             android:textSize="17sp" />
