--- a/app/src/main/res/layout/fragment_person_layout.xml
+++ b/app/src/main/res/layout/fragment_person_layout.xml
@@ -9,45 +9,78 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="4"
-        android:background="@color/blue_line">
+        android:layout_weight="5"
+        android:background="@color/gray_word_hint"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:paddingTop="10dp">
 
-        <com.anjile.shineourlove.rxjavaapplication.view.RoundImageView
-            android:layout_width="72dp"
-            android:layout_height="72dp"
+        <RelativeLayout
+            android:id="@+id/rl_fragment_person_center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:src="@color/white_side" />
+            android:gravity="center"
+            android:orientation="vertical">
 
-        <com.anjile.shineourlove.rxjavaapplication.view.RoundImageView
-            android:id="@+id/img_fragment_person_head_image"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_centerInParent="true"
-            android:src="@drawable/test1" />
+            <com.anjile.shineourlove.rxjavaapplication.view.RoundImageView
+                android:layout_width="72dp"
+                android:layout_height="72dp"
+                android:layout_centerHorizontal="true"
+                android:src="@color/white_side" />
+
+            <com.anjile.shineourlove.rxjavaapplication.view.RoundImageView
+                android:id="@+id/img_fragment_person_head_image"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="1dp"
+                android:src="@drawable/test1" />
+
+            <TextView
+                android:id="@+id/txt_fragment_person_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/img_fragment_person_head_image"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/white"
+                tools:text="甜蜜蜜" />
+        </RelativeLayout>
 
         <TextView
-            android:id="@+id/txt_fragment_person_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/img_fragment_person_head_image"
+            android:layout_below="@+id/rl_fragment_person_center"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp"
-            android:textColor="@color/white"
-            tools:text="甜蜜蜜" />
+            android:text="136 3789 7256"
+            android:textColor="@color/white" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:text="点此签到"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:paddingTop="4dp"
+            android:paddingBottom="4dp"
+            android:background="@drawable/round_5_blue_half_left"
+            android:textColor="@color/white" />
     </RelativeLayout>
 
     <LinearLayout
         android:id="@+id/rcv_fragment_person_item"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="7"
+        android:layout_weight="10"
         android:orientation="vertical">
 
         <LinearLayout
-            android:id="@+id/ll_fragment_home_order_form"
             android:layout_width="match_parent"
+            android:layout_weight="2"
             android:layout_height="0dp"
-            android:layout_weight="1"
             android:gravity="center_vertical"
             android:orientation="horizontal"
             android:paddingBottom="4dp"
@@ -55,16 +88,93 @@
             android:paddingRight="16dp"
             android:paddingTop="4dp">
 
-            <ImageView
-                android:layout_width="32dp"
-                android:layout_height="wrap_content"
-                android:src="@mipmap/ic_launcher" />
+            <LinearLayout
+                android:id="@+id/ll_fragment_home_order_form"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:text="我的订单" />
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ssdk_oks_classic_dingding" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="6dp"
+                    android:text="@string/order_form"
+                    android:textColor="@color/black_wold"
+                    android:textSize="17sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/ll_fragment_home_order_receiving"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ssdk_oks_classic_dingding" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="6dp"
+                    android:text="@string/order_receiving"
+                    android:textColor="@color/black_wold"
+                    android:textSize="17sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/ll_fragment_home_integral"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ssdk_oks_classic_dingding" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="6dp"
+                    android:text="@string/integral"
+                    android:textColor="@color/black_wold"
+                    android:textSize="17sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/ll_fragment_home_collect"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ssdk_oks_classic_dingding" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="6dp"
+                    android:text="@string/collect"
+                    android:textColor="@color/black_wold"
+                    android:textSize="17sp" />
+            </LinearLayout>
         </LinearLayout>
 
         <TextView
@@ -74,29 +184,6 @@
             android:layout_marginStart="64dp"
             android:background="#EEEEEE" />
 
-        <LinearLayout
-            android:id="@+id/ll_fragment_home_collect"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:paddingBottom="4dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:paddingTop="4dp">
-
-            <ImageView
-                android:layout_width="32dp"
-                android:layout_height="wrap_content"
-                android:src="@mipmap/ic_launcher" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:text="我的收藏" />
-        </LinearLayout>
 
         <TextView
             android:layout_width="match_parent"
@@ -158,6 +245,37 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
                 android:text="合作单位" />
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:layout_marginEnd="0dp"
+            android:layout_marginStart="64dp"
+            android:background="#EEEEEE" />
+
+        <LinearLayout
+            android:id="@+id/ll_fragment_home_receive"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:paddingBottom="4dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:paddingTop="4dp">
+
+            <ImageView
+                android:layout_width="32dp"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/ic_launcher" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:text="接单认证" />
         </LinearLayout>
 
         <TextView
@@ -256,11 +374,11 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="3"
+        android:layout_height="90dp"
+        android:layout_gravity="center_vertical"
         android:background="#F2F2F2"
         android:gravity="center_horizontal"
-        android:paddingTop="14dp"
+        android:paddingTop="10dp"
         android:text="@string/service_phone_number"
         android:textColor="@color/gray_word"
         android:textSize="13sp" />
