--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -3,7 +3,7 @@
     <color name="orange">#FFC107</color>
     <color name="green">#259B24</color>
     <color name="purple">#9C27B0</color>
-    <color name="blue">#03A9F4</color>
+    <color name="blue">#29a1f7</color>
     <color name="white">#FFFFFF</color>
     <color name="lime">#CDDC39</color>
     <color name="code_blue">#cae5ff</color>
@@ -16,5 +16,8 @@
     <color name="gray_line">#EEEEEE</color>
     <color name="white_side">#DFE7FE</color>
     <color name="black_wold">#282828</color>
+    <color name="blue_start">#00b4ff</color>
+    <color name="blue_end">#0072ff</color>
     <color name="gray_word_hint">#989898</color>
+    <color name="gray_divide">#f2f2f2</color>
 </resources>
