2017/10/31 add many activity by shineourlove

--- a/app/src/main/res/layout/activity_budget_program_layout.xml
+++ b/app/src/main/res/layout/activity_budget_program_layout.xml
@@ -82,7 +82,7 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="5dp"
+        android:layout_height="@dimen/gray_divide_line_height"
         android:background="@color/gray_line" />
 
     <RelativeLayout
