--- a/app/src/main/res/layout/activity_open_activity.xml
+++ b/app/src/main/res/layout/activity_open_activity.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/gray_divide"
     android:orientation="vertical"
     tools:context="com.anjile.shineourlove.rxjavaapplication.activity.OpenVIPActivityActivity">
 
@@ -12,9 +13,10 @@
         android:layout_height="wrap_content" />
 
     <LinearLayout
-        android:id="@+id/txt_open_vip_1year"
+        android:id="@+id/ll_open_vip_1year"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         android:orientation="vertical"
         android:paddingEnd="0dp"
         android:paddingStart="15dp">
@@ -54,9 +56,10 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/txt_open_vip_2year"
+        android:id="@+id/ll_open_vip_2year"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         android:orientation="vertical"
         android:paddingEnd="0dp"
         android:paddingStart="15dp">
@@ -69,7 +72,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="开通1年VIP服务"
+                android:text="开通2年VIP服务"
                 android:textColor="@color/gray_word" />
 
             <TextView
@@ -77,7 +80,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_marginRight="15dp"
-                android:text="¥4980元"
+                android:text="¥7880元"
                 android:textColor="@color/red" />
         </RelativeLayout>
 
@@ -85,7 +88,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
-            android:text="开通会员服务7天内可更换套餐"
+            android:text="送：100元话费"
             android:textColor="@color/gray_word_hint" />
 
         <TextView
@@ -96,9 +99,10 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/txt_open_vip_3year"
+        android:id="@+id/ll_open_vip_3year"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         android:orientation="vertical"
         android:paddingEnd="0dp"
         android:paddingStart="15dp">
@@ -111,7 +115,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="开通1年VIP服务"
+                android:text="开通3年VIP服务"
                 android:textColor="@color/gray_word" />
 
             <TextView
@@ -119,7 +123,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_marginRight="15dp"
-                android:text="¥4980元"
+                android:text="¥10980元"
                 android:textColor="@color/red" />
         </RelativeLayout>
 
@@ -127,7 +131,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
-            android:text="开通会员服务7天内可更换套餐"
+            android:text="送：200元话费"
             android:textColor="@color/gray_word_hint" />
 
         <TextView
@@ -138,9 +142,10 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/txt_open_vip_4year"
+        android:id="@+id/ll_open_vip_4year"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         android:orientation="vertical"
         android:paddingEnd="0dp"
         android:paddingStart="15dp">
@@ -153,7 +158,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="开通1年VIP服务"
+                android:text="开通4年VIP服务"
                 android:textColor="@color/gray_word" />
 
             <TextView
@@ -161,7 +166,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_marginRight="15dp"
-                android:text="¥4980元"
+                android:text="¥13880元"
                 android:textColor="@color/red" />
         </RelativeLayout>
 
@@ -169,7 +174,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
-            android:text="开通会员服务7天内可更换套餐"
+            android:text="送：300元话费"
             android:textColor="@color/gray_word_hint" />
 
         <TextView
@@ -180,9 +185,10 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/txt_open_vip_5year"
+        android:id="@+id/ll_open_vip_5year"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         android:orientation="vertical"
         android:paddingEnd="0dp"
         android:paddingStart="15dp">
@@ -195,7 +201,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="开通1年VIP服务"
+                android:text="开通5年VIP服务"
                 android:textColor="@color/gray_word" />
 
             <TextView
@@ -203,7 +209,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_marginRight="15dp"
-                android:text="¥4980元"
+                android:text="¥16580元"
                 android:textColor="@color/red" />
         </RelativeLayout>
 
@@ -211,7 +217,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
-            android:text="开通会员服务7天内可更换套餐"
+            android:text="送：400元话费"
             android:textColor="@color/gray_word_hint" />
 
         <TextView
@@ -220,4 +226,25 @@
             android:layout_marginTop="2dp"
             android:background="@color/gray_divide" />
     </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="15dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/vip_open_hint"
+        android:textAlignment="viewEnd"
+        android:textColor="@color/blue_word"
+        android:textSize="12sp" />
+
+    <Button
+        android:id="@+id/btn_open_vip_hot_line"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/round_radius_50_blue"
+        android:text="@string/vip_open_hot_line"
+        android:textColor="@color/white" />
 </LinearLayout>
