--- a/app/src/main/res/layout/fragment_two_layout.xml
+++ b/app/src/main/res/layout/fragment_two_layout.xml
@@ -95,7 +95,7 @@
                     android:layout_marginBottom="8dp"
                     android:layout_marginRight="15dp"
                     android:layout_marginTop="8dp"
-                    android:background="@drawable/line_blue_1px"
+                    android:background="@drawable/stroke_blue_1px"
                     android:paddingBottom="4dp"
                     android:paddingLeft="12dp"
                     android:paddingRight="12dp"
