--- a/app/src/main/res/layout/include_top_status_bar.xml
+++ b/app/src/main/res/layout/include_top_status_bar.xml
@@ -1,54 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="4dp"
-    android:paddingBottom="4dp"
-    android:background="@drawable/gradient_blue_to_blue"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/img_top_status_bar_back"
-        android:layout_width="wrap_content"
-        android:layout_height="24dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="10dp"
-        android:layout_centerVertical="true"
-        tools:src="@drawable/back" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/gradient_blue_to_blue"
+        android:paddingBottom="4dp"
+        android:paddingTop="4dp">
+
+        <ImageView
+            android:id="@+id/img_top_status_bar_back"
+            android:layout_width="wrap_content"
+            android:layout_height="24dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            tools:src="@drawable/back" />
+
+        <TextView
+            android:id="@+id/txt_top_status_bar_left"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@+id/img_top_status_bar_back"
+            android:textColor="@color/white"
+            android:textSize="17sp"
+            tools:text="返回" />
+
+        <TextView
+            android:id="@+id/txt_top_status_bar_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:textColor="@color/white"
+            android:textSize="17sp"
+            tools:text="意见反馈" />
+
+        <TextView
+            android:id="@+id/txt_top_status_bar_right"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="13dp"
+            android:paddingBottom="6dp"
+            android:paddingLeft="20dp"
+            android:paddingTop="6dp"
+            android:textColor="@color/white"
+            android:textSize="17sp"
+            tools:text="提交" />
+    </RelativeLayout>
 
     <TextView
-        android:id="@+id/txt_top_status_bar_left"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_toRightOf="@+id/img_top_status_bar_back"
-        android:textColor="@color/white"
-        android:textSize="17sp"
-        tools:text="返回" />
-
-    <TextView
-        android:id="@+id/txt_top_status_bar_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:textColor="@color/white"
-        android:textSize="17sp"
-        tools:text="意见反馈" />
-
-    <TextView
-        android:id="@+id/txt_top_status_bar_right"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="13dp"
-        android:paddingBottom="6dp"
-        android:paddingLeft="20dp"
-        android:paddingTop="6dp"
-        android:textColor="@color/white"
-        android:textSize="17sp"
-        tools:text="提交" />
-
-</RelativeLayout>
+        android:layout_width="match_parent"
+        android:layout_height="3px"
+        android:background="@color/gray_divide" />
+</LinearLayout>
