--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,9 @@
     <dimen name="dp_70">70dp</dimen>
     <dimen name="dp_10">10dp</dimen>
     <dimen name="dp_2">2dp</dimen>
+    <dimen name="item_margin_left">15dp</dimen>
+    <dimen name="item_margin_right">15dp</dimen>
+    <dimen name="gray_divide_line_height">5dp</dimen>
+    <dimen name="item_text_vertical_margin">14dp</dimen>
+    <dimen name="item_text_size">14sp</dimen>
 </resources>
