--- a/app/src/main/res/layout/activity_budget_program_layout.xml
+++ b/app/src/main/res/layout/activity_budget_program_layout.xml
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="预算方案"
-            android:textColor="@color/black_wold"
+            android:textColor="@color/black_word"
             android:textSize="17sp" />
     </RelativeLayout>
 
