--- a/app/src/main/res/layout/activity_indentity_authentication.xml
+++ b/app/src/main/res/layout/activity_indentity_authentication.xml
@@ -19,7 +19,7 @@
         android:gravity="center"
         android:text="@string/identity_authentication_hint"
         android:textAlignment="center"
-        android:textColor="@color/black_wold"
+        android:textColor="@color/black_word"
         android:textSize="16sp" />
 
     <TextView
@@ -28,7 +28,7 @@
         android:layout_marginTop="16dp"
         android:gravity="center"
         android:text="@string/identity_authentication_example"
-        android:textColor="@color/black_wold"
+        android:textColor="@color/black_word"
         android:textSize="16sp" />
 
     <LinearLayout
