--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -15,7 +15,7 @@
     <color name="gray_word">#656565</color>
     <color name="gray_line">#EEEEEE</color>
     <color name="white_side">#DFE7FE</color>
-    <color name="black_wold">#282828</color>
+    <color name="black_word">#282828</color>
     <color name="blue_start">#00b4ff</color>
     <color name="blue_end">#0072ff</color>
     <color name="gray_word_hint">#989898</color>
