--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="意见反馈"
-            android:textColor="@color/black_wold"
+            android:textColor="@color/black_word"
             android:textSize="17sp" />
 
         <TextView
@@ -36,7 +36,7 @@
             android:paddingLeft="20dp"
             android:paddingTop="6dp"
             android:text="提交"
-            android:textColor="@color/black_wold"
+            android:textColor="@color/black_word"
             android:textSize="17sp" />
     </RelativeLayout>
 
