--- a/app/src/main/res/layout/activity_integral_details.xml
+++ b/app/src/main/res/layout/activity_integral_details.xml
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:gravity="center"
-        android:textColor="@color/black_wold"
+        android:textColor="@color/black_word"
         android:textSize="44sp"
         tools:text="1,111" />
 
