--- a/app/src/main/res/layout/activity_query.xml
+++ b/app/src/main/res/layout/activity_query.xml
@@ -89,7 +89,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="选择省市"
-                android:textColor="@color/black_wold"
+                android:textColor="@color/black_word"
                 android:textSize="13sp" />
 
             <ImageView
@@ -127,7 +127,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:text="企业名称"
-                android:textColor="@color/black_wold"
+                android:textColor="@color/black_word"
                 android:textSize="13sp" />
 
             <EditText
@@ -160,7 +160,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:text="企业要求"
-                android:textColor="@color/black_wold"
+                android:textColor="@color/black_word"
                 android:textSize="13sp" />
 
             <RadioGroup
@@ -213,7 +213,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="资质搜索条件"
-                android:textColor="@color/black_wold"
+                android:textColor="@color/black_word"
                 android:textSize="13sp" />
 
             <ImageView
@@ -251,7 +251,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="业绩搜索条件"
-                android:textColor="@color/black_wold"
+                android:textColor="@color/black_word"
                 android:textSize="13sp" />
 
             <ImageView
@@ -289,7 +289,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="人员搜索条件"
-                android:textColor="@color/black_wold"
+                android:textColor="@color/black_word"
                 android:textSize="13sp" />
 
             <ImageView
@@ -327,7 +327,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="信誉搜索条件"
-                android:textColor="@color/black_wold"
+                android:textColor="@color/black_word"
                 android:textSize="13sp" />
 
             <ImageView
@@ -366,7 +366,7 @@
                 android:text="立即查询"
                 android:textAlignment="center"
                 android:textColor="@color/white"
-                android:textSize="18sp" />
+                android:textSize="@dimen/btn_text_size" />
         </RelativeLayout>
     </LinearLayout>
 
@@ -390,7 +390,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:text="项目名称"
-                android:textColor="@color/black_wold"
+                android:textColor="@color/black_word"
                 android:textSize="13sp" />
 
             <EditText
@@ -422,7 +422,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:text="企业名称"
-                android:textColor="@color/black_wold"
+                android:textColor="@color/black_word"
                 android:textSize="13sp" />
 
             <EditText
@@ -454,7 +454,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:text="建造师"
-                android:textColor="@color/black_wold"
+                android:textColor="@color/black_word"
                 android:textSize="13sp" />
 
             <EditText
@@ -486,7 +486,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="项目所在地"
-                android:textColor="@color/black_wold"
+                android:textColor="@color/black_word"
                 android:textSize="13sp" />
 
             <ImageView
@@ -532,7 +532,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:text="中标时间段"
-                android:textColor="@color/black_wold"
+                android:textColor="@color/black_word"
                 android:textSize="13sp" />
 
 
@@ -596,7 +596,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:text="业绩规模"
-                android:textColor="@color/black_wold"
+                android:textColor="@color/black_word"
                 android:textSize="13sp" />
 
             <TextView
@@ -650,7 +650,7 @@
                 android:text="立即查询"
                 android:textAlignment="center"
                 android:textColor="@color/white"
-                android:textSize="18sp" />
+                android:textSize="@dimen/btn_text_size" />
         </RelativeLayout>
     </LinearLayout>
 </LinearLayout>
