--- a/app/src/main/res/layout/integral_gain_details_item.xml
+++ b/app/src/main/res/layout/integral_gain_details_item.xml
@@ -17,7 +17,7 @@
             android:id="@+id/txt_integral_gain_details_item_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/black_wold"
+            android:textColor="@color/black_word"
             android:textSize="14sp"
             tools:text="签到积分" />
 
@@ -37,7 +37,7 @@
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
         android:layout_marginEnd="15sp"
-        android:textColor="@color/black_wold"
+        android:textColor="@color/black_word"
         android:textSize="20sp"
         tools:text="+5" />
 
