--- a/app/src/main/res/layout/item_message_list_layout.xml
+++ b/app/src/main/res/layout/item_message_list_layout.xml
@@ -27,7 +27,7 @@
             android:id="@+id/txt_item_message_list_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/black_wold"
+            android:textColor="@color/black_word"
             android:textSize="14sp"
             tools:text="系统消息" />
 
