--- a/app/src/main/res/layout/project_select_item_layout.xml
+++ b/app/src/main/res/layout/project_select_item_layout.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginLeft="14dp"
-        android:textColor="@color/black_wold"
+        android:textColor="@color/black_word"
         tools:text="园林工程" />
 
     <ImageView
