--- a/app/src/main/res/layout/activity_order_receive_authentication.xml
+++ b/app/src/main/res/layout/activity_order_receive_authentication.xml
@@ -334,7 +334,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:background="@color/gray_divide"
+                    android:background="@drawable/radius_6_solid_gray"
                     android:gravity="top|start"
                     android:minHeight="100dp"
                     android:paddingBottom="8dp"
