--- a/app/src/main/res/layout/fragment_home_layout.xml
+++ b/app/src/main/res/layout/fragment_home_layout.xml
@@ -31,9 +31,9 @@
                 android:id="@+id/img_fragment_home_area"
                 android:layout_width="12dp"
                 android:layout_height="12dp"
+                android:layout_centerVertical="true"
                 android:layout_marginLeft="4dp"
                 android:layout_marginRight="4dp"
-                android:layout_centerVertical="true"
                 android:layout_toEndOf="@+id/txt_fragment_home_area"
                 android:src="@drawable/arrow_down" />
 
@@ -66,11 +66,13 @@
                     android:layout_alignTop="@+id/img_fragment_home_search"
                     android:layout_centerVertical="true"
                     android:layout_toRightOf="@+id/img_fragment_home_search"
+                    android:background="#00ffffff"
+                    android:hint="@string/search_hint"
                     android:paddingEnd="0dp"
                     android:paddingStart="4dp"
-                    android:text="@string/search_hint"
-                    android:textColor="@color/white" />
-
+                    android:textColor="@color/white"
+                    android:textColorHint="@color/white"
+                    android:textSize="@dimen/item_text_size" />
             </RelativeLayout>
         </RelativeLayout>
 
